--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
 
       <a class="sidebar-nav-item" href="https://www.linkedin.com/in/maykol-alberto-jimenez-bejarano-8a747b44/">Linked In</a>
       <hr>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" target="_blank" href="{{ site.github.repo }}">GitHub</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
